--- a/src/pages/tabs-controller/tabs-controller.html
+++ b/src/pages/tabs-controller/tabs-controller.html
@@ -1,8 +1,8 @@
 <ion-tabs id="tabsController-tabs">
-  <ion-tab [root]="tests" [rootParams]="charParam" tabTitle="Tests" tabIcon="cube" id="tabsController-tests"></ion-tab>
-  <ion-tab [root]="status" [rootParams]="charParam" tabTitle="Status" tabIcon="stats" id="tabsController-status"></ion-tab>
-  <ion-tab [root]="extras" [rootParams]="charParam" tabTitle="Extras" tabIcon="bookmark" id="tabsController-extras"></ion-tab>
-  <ion-tab [root]="equipments" [rootParams]="charParam" tabTitle="Equipments" tabIcon="body" id="tabsController-equipments"></ion-tab>
-  <ion-tab [root]="inventory" [rootParams]="charParam" tabTitle="Inventory" tabIcon="briefcase" id="tabsController-inventory"></ion-tab>
-  <ion-tab [root]="skills" [rootParams]="charParam" tabTitle="Skills" tabIcon="hand" id="tabsController-skills"></ion-tab>
+  <ion-tab [root]="tests" [rootParams]="char" tabTitle="Tests" tabIcon="cube" id="tabsController-tests"></ion-tab>
+  <ion-tab [root]="status" [rootParams]="char" tabTitle="Status" tabIcon="stats" id="tabsController-status"></ion-tab>
+  <ion-tab [root]="extras" [rootParams]="char" tabTitle="Extras" tabIcon="bookmark" id="tabsController-extras"></ion-tab>
+  <ion-tab [root]="equipments" [rootParams]="char" tabTitle="Equipments" tabIcon="body" id="tabsController-equipments"></ion-tab>
+  <ion-tab [root]="inventory" [rootParams]="char" tabTitle="Inventory" tabIcon="briefcase" id="tabsController-inventory"></ion-tab>
+  <ion-tab [root]="skills" [rootParams]="char" tabTitle="Skills" tabIcon="hand" id="tabsController-skills"></ion-tab>
 </ion-tabs>
