--- a/src/pages/modal-languages/modal-languages.html
+++ b/src/pages/modal-languages/modal-languages.html
@@ -2,7 +2,7 @@
     <ion-list>
         <ion-item-sliding *ngFor="let language of languages">
             <ion-item *ngIf="notInCharList(language)">
-                <ion-thumbnail style="width:20%" item-start>
+                <ion-thumbnail style="width:20%;text-align: center;vertical-align: center" item-start>
                     <h1>{{language.name}}</h1>
                 </ion-thumbnail>
                 <p>{{language.description}}</p>
