Changes of saving methods

--- a/src/pages/character-features/character-features.html
+++ b/src/pages/character-features/character-features.html
@@ -44,11 +44,11 @@
         </ion-label>
         <ion-input [(ngModel)]="new_char.max_points" [ngModelOptions]="{standalone: true}" type="number" placeholder="" aria-required="true"></ion-input>
       </ion-item>
-      <ion-item id="characterFeatures-resource">
+      <ion-item id="characterFeatures-resources">
         <ion-label>
-          *Inicial Resource
+          *Inicial Resources
         </ion-label>
-        <ion-input [(ngModel)]="new_char.resource" [ngModelOptions]="{standalone: true}" type="number" placeholder="" aria-required="true"></ion-input>
+        <ion-input [(ngModel)]="new_char.resources" [ngModelOptions]="{standalone: true}" type="number" placeholder="" aria-required="true"></ion-input>
       </ion-item>
       <ion-item id="characterFeatures-description">
         <ion-label>
