--- a/src/pages/character-resume/character-resume.html
+++ b/src/pages/character-resume/character-resume.html
@@ -35,7 +35,7 @@
       </ion-item>
       <ion-item color="none">
         Resources:
-        <ion-note>{{new_char.resource}}</ion-note>
+        <ion-note>{{new_char.resources}}</ion-note>
       </ion-item>
       <ion-item color="none">
         Description:
