--- a/src/pages/modal-disadvantages/modal-disadvantages.html
+++ b/src/pages/modal-disadvantages/modal-disadvantages.html
@@ -14,6 +14,15 @@
         width: 3ex;
         opacity: 0.25;
     }
+
+    h1 {
+        text-align: center;
+        word-wrap: normal;
+    }
+
+    ion-thumbnail {
+        width: 20%
+    }
 </style>
 
 <html style="background:white">
@@ -45,6 +54,7 @@
         <ion-item-sliding *ngFor="let mental of mentals">
             <ion-item *ngIf="notInCharList(mental)">
                 <ion-thumbnail item-start>
+                    <h1>{{mental.name}}</h1>
                     <ion-grid>
                         <ion-row>
                             <ion-col col-4 style="text-align: center">
@@ -85,8 +95,7 @@
                         </ion-row>
                     </ion-grid>
                 </ion-thumbnail>
-                <h2>{{mental.name}}</h2>
-                <p>{{mental.description}}</p>
+                <p item-content>{{mental.description}}</p>
                 <button ion-button clear item-end on-click="returnData(mental)">Add</button>
             </ion-item>
         </ion-item-sliding>
@@ -95,6 +104,7 @@
         <ion-item-sliding *ngFor="let physical of physicals">
             <ion-item *ngIf="notInCharList(physical)">
                 <ion-thumbnail item-start>
+                    <h1>{{physical.name}}</h1>
                     <ion-grid>
                         <ion-row>
                             <ion-col *ngIf="physical.isMental()" col-4 style="text-align: center">
@@ -135,8 +145,7 @@
                         </ion-row>
                     </ion-grid>
                 </ion-thumbnail>
-                <h2>{{physical.name}}</h2>
-                <p>{{physical.description}}</p>
+                <p item-content>{{physical.description}}</p>
                 <button ion-button clear item-end on-click="returnData(physical)">Add</button>
             </ion-item>
         </ion-item-sliding>
@@ -145,6 +154,7 @@
         <ion-item-sliding *ngFor="let social of socials">
             <ion-item *ngIf="notInCharList(social)">
                 <ion-thumbnail item-start>
+                    <h1>{{social.name}}</h1>
                     <ion-grid>
                         <ion-row>
                             <ion-col *ngIf="social.isMental()" col-4 style="text-align: center">
@@ -185,8 +195,7 @@
                         </ion-row>
                     </ion-grid>
                 </ion-thumbnail>
-                <h2>{{social.name}}</h2>
-                <p>{{social.description}}</p>
+                <p item-content>{{social.description}}</p>
                 <button ion-button clear item-end on-click="returnData(social)">Add</button>
             </ion-item>
         </ion-item-sliding>
@@ -195,6 +204,7 @@
         <ion-item-sliding *ngFor="let exotic of exotics">
             <ion-item *ngIf="notInCharList(exotic)">
                 <ion-thumbnail item-start>
+                    <h1>{{exotic.name}}</h1>
                     <ion-grid>
                         <ion-row>
                             <ion-col *ngIf="exotic.isMental()" col-4 style="text-align: center">
@@ -235,8 +245,7 @@
                         </ion-row>
                     </ion-grid>
                 </ion-thumbnail>
-                <h2>{{exotic.name}}</h2>
-                <p>{{exotic.description}}</p>
+                <p item-content>{{exotic.description}}</p>
                 <button ion-button clear item-end on-click="returnData(exotic)">Add</button>
             </ion-item>
         </ion-item-sliding>
@@ -245,6 +254,7 @@
         <ion-item-sliding *ngFor="let supernatural of supernaturals">
             <ion-item *ngIf="notInCharList(supernatural)">
                 <ion-thumbnail item-start>
+                    <h1>{{supernatural.name}}</h1>
                     <ion-grid>
                         <ion-row>
                             <ion-col *ngIf="supernatural.isMental()" col-4 style="text-align: center">
@@ -285,8 +295,7 @@
                         </ion-row>
                     </ion-grid>
                 </ion-thumbnail>
-                <h2>{{supernatural.name}}</h2>
-                <p>{{supernatural.description}}</p>
+                <p item-content>{{supernatural.description}}</p>
                 <button ion-button clear item-end on-click="returnData(supernatural)">Add</button>
             </ion-item>
         </ion-item-sliding>
@@ -295,6 +304,7 @@
         <ion-item-sliding *ngFor="let mundane of mundanes">
             <ion-item *ngIf="notInCharList(mundane)">
                 <ion-thumbnail item-start>
+                    <h1>{{mundane.name}}</h1>
                     <ion-grid>
                         <ion-row>
                             <ion-col *ngIf="mundane.isMental()" col-4 style="text-align: center">
@@ -338,8 +348,7 @@
                         </ion-row>
                     </ion-grid>
                 </ion-thumbnail>
-                <h2>{{mundane.name}}</h2>
-                <p>{{mundane.description}}</p>
+                <p item-content>{{mundane.description}}</p>
                 <button ion-button clear item-end on-click="returnData(mundane)">Add</button>
             </ion-item>
         </ion-item-sliding>
