--- a/src/pages/modal-languages/modal-languages.html
+++ b/src/pages/modal-languages/modal-languages.html
@@ -1,13 +1,25 @@
+<style>
+    h1 {
+        text-align: center;
+        word-wrap: normal;
+    }
+
+    ion-thumbnail {
+        width: 20%
+    }
+</style>
+
 <html style="background:white">
-    <ion-list>
-        <ion-item-sliding *ngFor="let language of languages">
-            <ion-item *ngIf="notInCharList(language)">
-                <ion-thumbnail style="width:20%;text-align: center;vertical-align: center" item-start>
-                    <h1>{{language.name}}</h1>
-                </ion-thumbnail>
-                <p>{{language.description}}</p>
-                <button ion-button clear item-end on-click="returnData(language)">Add</button>
-            </ion-item>
-        </ion-item-sliding>
-    </ion-list>
+<ion-list>
+    <ion-item-sliding *ngFor="let language of languages">
+        <ion-item *ngIf="notInCharList(language)">
+            <ion-thumbnail style="width:20%;text-align: center;vertical-align: center" item-start>
+                <h1>{{language.name}}</h1>
+            </ion-thumbnail>
+            <p>{{language.description}}</p>
+            <button ion-button clear item-end on-click="returnData(language)">Add</button>
+        </ion-item>
+    </ion-item-sliding>
+</ion-list>
+
 </html>
