--- a/src/pages/modal-languages/modal-languages.html
+++ b/src/pages/modal-languages/modal-languages.html
@@ -5,7 +5,7 @@
     }
 
     ion-thumbnail {
-        width: 20%
+        width: 20%;
     }
 </style>
 
@@ -13,10 +13,10 @@
 <ion-list>
     <ion-item-sliding *ngFor="let language of languages">
         <ion-item *ngIf="notInCharList(language)">
-            <ion-thumbnail style="width:20%;text-align: center;vertical-align: center" item-start>
+            <ion-thumbnail item-start>
                 <h1>{{language.name}}</h1>
             </ion-thumbnail>
-            <p>{{language.description}}</p>
+            <p item-content>{{language.description}}</p>
             <button ion-button clear item-end on-click="returnData(language)">Add</button>
         </ion-item>
     </ion-item-sliding>
