--- a/src/pages/character-features/character-features.html
+++ b/src/pages/character-features/character-features.html
@@ -50,6 +50,12 @@
         </ion-label>
         <ion-input formControlName="resources" type="number"></ion-input>
       </ion-item>
+      <ion-item id="characterFeatures-nt">
+        <ion-label>
+         NT
+        </ion-label>
+        <ion-input formControlName="nt" type="number"></ion-input>
+      </ion-item>
       <ion-item id="characterFeatures-description">
         <ion-label>
           Description
