--- a/src/pages/character-languages/character-languages.html
+++ b/src/pages/character-languages/character-languages.html
@@ -46,7 +46,7 @@
       <!-- Add a new language to the list -->
       <ion-item-sliding>
         <ion-item color="none" id="characterLanguage-list-item">
-          Add language
+          Add Language
           <ion-note item-right>Swipe left</ion-note>
         </ion-item>
         <ion-item-options side="right">
