--- a/src/pages/extras/extras.html
+++ b/src/pages/extras/extras.html
@@ -1,3 +1,10 @@
+<style>
+  h1 {
+    text-align: center;
+    word-wrap: normal;
+  }
+</style>
+
 <ion-header>
   <ion-navbar>
     <ion-buttons start>
@@ -30,7 +37,7 @@
     </ion-item>
     <ion-item color="none" id="extras-item-carry-category">
       Current Carry Category
-      <ion-note item-right>{{current_carry_category}}</ion-note>
+      <ion-note item-right>{{this.char.getCarryCategory()}}</ion-note>
     </ion-item>
     <ion-item color="none" id="extras-item-speed">
       Speed
@@ -42,7 +49,7 @@
     </ion-item>
     <ion-item color="none" id="extras-item-current-movement">
       Current Movement
-      <ion-note item-right>{{current_movement}} steps</ion-note>
+      <ion-note item-right>{{char.getMovement()}} steps</ion-note>
     </ion-item>
   </ion-list>
   <h3 id="extras-tag-2" style="color:#000000;">
@@ -77,20 +84,18 @@
     Advantages
   </h3>
   <ion-item-sliding *ngFor="let advantage of char.advantages">
-    <ion-item color="none">
-      {{advantage.name}}
-      <br>
-      <ion-note>{{advantage.description}}</ion-note>
+    <ion-item>
+      <h1 item-start style="width:20%">{{advantage.name}}</h1>
+      <ion-note item-content>{{advantage.description}}</ion-note>
     </ion-item>
   </ion-item-sliding>
   <h3 id="extras-tag-5" style="color:#000000;">
     Disadvantages
   </h3>
   <ion-item-sliding *ngFor="let disadvantage of char.disadvantages">
-    <ion-item color="none">
-      {{disadvantage.name}}
-      <br>
-      <ion-note>{{disadvantage.description}}</ion-note>
-    </ion-item>
-  </ion-item-sliding>
+      <ion-item>
+        <h1 item-start style="width:20%">{{disadvantage.name}}</h1>
+        <ion-note item-content>{{disadvantage.description}}</ion-note>
+      </ion-item>
+    </ion-item-sliding>
 </ion-content>
